refactor: update type definitions and improve type safety across the codebase
- Changed type of `feeds` in `content.d.ts` from `any` to `unknown`.
- Updated `DashboardLayout.test.ts` to use dynamic imports for .astro components to avoid TypeScript resolution issues.
- Adjusted type assertions in `api-analyze.test.ts` for POST handler.
- Simplified imports in `bias_detection_service.py` for Fairlearn metrics.
- Added `AIService` interface in `types.ts` for better type definitions.
- Enhanced logging in `educational-context-recognizer.test.ts` for debugging purposes.
- Removed unnecessary type declarations in `vitest.setup.ts`.
- Added flexible properties to `PresetScenario` interface in `bias-detection.ts`.
- Refactored API routes in `performance-metrics.ts`, `logout.ts`, and `profile.ts` for improved type safety and clarity.
- Introduced a new GET endpoint in `analyze.ts` for session analysis with mock results.
- Updated health check in `health.ts` to improve type definitions and checks.
- Changed image source in `index.astro` for better representation.
- Enhanced user model in `mongoAuth.service.ts` to include `id` and `profile`.
- Improved type definitions in various files to use `unknown` instead of `any` for better type safety.

--- a/.github/workflows/ai-validation.yml
+++ b/.github/workflows/ai-validation.yml
@@ -107,7 +107,7 @@ jobs:
           # Get validation history and results
           STATUS_CODE=$(curl -s -o validation_history.json -w "%{http_code}" \
             "${APP_URL}/api/ai/validation/history?limit=1" \
-            -H "Authorization: Bearer ${{ secrets.VALIDATION_API_TOKEN }}")
+            -H "Authorization: Bearer $VALIDATION_API_TOKEN")
 
           if [[ $STATUS_CODE -ge 200 && $STATUS_CODE -lt 300 ]]; then
             echo "success=true" >> "$GITHUB_OUTPUT"
