--- a/.github/workflows/ml-quality-gates.yml
+++ b/.github/workflows/ml-quality-gates.yml
@@ -34,7 +34,7 @@ on:
 env:
   NODE_VERSION: 22.16.0
   PYTHON_VERSION: 3.11
-  PNPM_VERSION: 
+  PNPM_VERSION: "10.14.0"
 
 jobs:
   # ML-Based Risk Assessment
@@ -418,7 +418,8 @@ jobs:
           RISK_LEVEL="${{ needs.ml-risk-assessment.outputs.risk_level }}"
           RISK_SCORE="${{ needs.ml-risk-assessment.outputs.risk_score }}"
           FAILURE_PROBABILITY="${{ needs.predictive-failure-analysis.outputs.failure_probability }}"
-          TEST_STRATEGY="${{ needs.dynamic-test-selection.outputs.strategy }}"
+          # Fixed: reference the correct job output name 'test_strategy'
+          TEST_STRATEGY="${{ needs.dynamic-test-selection.outputs.test_strategy }}"
           
           echo "🚪 Applying intelligent quality gates..."
           
@@ -546,5 +547,5 @@ jobs:
           echo "## 🎯 ML-Based Quality Assessment Summary" >> $GITHUB_STEP_SUMMARY
           echo "**Overall Quality Score:** $QUALITY_SCORE/100" >> $GITHUB_STEP_SUMMARY
           echo "**Risk Level:** ${{ needs.ml-risk-assessment.outputs.risk_level }}" >> $GITHUB_STEP_SUMMARY
-          echo "**Recommended Strategy:** ${{ needs.dynamic-test-selection.outputs.strategy }}" >> $GITHUB_STEP_SUMMARY
+          echo "**Recommended Strategy:** ${{ needs.dynamic-test-selection.outputs.test_strategy }}" >> $GITHUB_STEP_SUMMARY
           echo "**Quality Gates:** ${{ needs.intelligent-quality-gates.outputs.gate_status }}" >> $GITHUB_STEP_SUMMARY
