--- a/.github/lighthouse-config.json
+++ b/.github/lighthouse-config.json
@@ -2,39 +2,69 @@
   "ci": {
     "collect": {
       "numberOfRuns": 3,
-      "startServerCommand": "",
-      "url": [],
       "settings": {
-        "preset": "desktop",
+        "preset": "mobile",
+        "formFactor": "mobile",
+        "throttlingMethod": "simulate",
         "throttling": {
-          "rttMs": 40,
-          "throughputKbps": 10240,
-          "cpuSlowdownMultiplier": 1,
-          "requestLatencyMs": 0,
-          "downloadThroughputKbps": 0,
-          "uploadThroughputKbps": 0
+          "rttMs": 150,
+          "throughputKbps": 1638.4,
+          "requestLatencyMs": 562.5,
+          "downloadThroughputKbps": 1474.56,
+          "uploadThroughputKbps": 675,
+          "cpuSlowdownMultiplier": 4
         },
-        "onlyCategories": [
-          "performance",
-          "accessibility",
-          "best-practices",
-          "seo"
-        ],
-        "skipAudits": ["uses-http2"]
-      }
+        "screenEmulation": {
+          "mobile": true
+        }
+      },
+      "chromeFlags": "--no-sandbox"
     },
     "assert": {
       "assertions": {
-        "categories:performance": ["error", { "minScore": 0.8 }],
-        "categories:accessibility": ["error", { "minScore": 0.9 }],
-        "categories:best-practices": ["error", { "minScore": 0.9 }],
-        "categories:seo": ["error", { "minScore": 0.9 }],
-        "first-contentful-paint": ["error", { "maxNumericValue": 2000 }],
-        "interactive": ["error", { "maxNumericValue": 3500 }],
-        "largest-contentful-paint": ["error", { "maxNumericValue": 2500 }],
-        "cumulative-layout-shift": ["error", { "maxNumericValue": 0.1 }],
-        "total-blocking-time": ["error", { "maxNumericValue": 300 }]
+        "categories:performance": [
+          "error",
+          { "minScore": 0.9 }
+        ],
+        "categories:accessibility": [
+          "warn",
+          { "minScore": 0.9 }
+        ],
+        "categories:best-practices": [
+          "warn",
+          { "minScore": 0.9 }
+        ],
+        "categories:seo": [
+          "warn",
+          { "minScore": 0.9 }
+        ],
+        "largest-contentful-paint": [
+          "error",
+          { "maxNumericValue": 3000, "aggregationMethod": "optimistic" }
+        ],
+        "total-blocking-time": [
+          "error",
+          { "maxNumericValue": 300, "aggregationMethod": "median" }
+        ],
+        "cumulative-layout-shift": [
+          "error",
+          { "maxNumericValue": 0.1, "aggregationMethod": "pessimistic" }
+        ],
+        "first-contentful-paint": [
+          "warn",
+          { "maxNumericValue": 2000, "aggregationMethod": "optimistic" }
+        ],
+        "server-response-time": [
+          "warn",
+          { "maxNumericValue": 800, "aggregationMethod": "median" }
+        ],
+        "uses-long-cache-ttl": ["warn", { "minScore": 0.9 }],
+        "unused-javascript": "warn",
+        "uses-rel-preload": "warn"
       }
+    },
+    "upload": {
+      "target": "temporary-public-storage"
     }
   }
 }
