--- a/.github/workflows/orchestrator.yml
+++ b/.github/workflows/orchestrator.yml
@@ -31,7 +31,7 @@ on:
 env:
   NODE_VERSION: 22.16.0
   PYTHON_VERSION: 3.11
-  PNPM_VERSION: "9"
+  PNPM_VERSION: 10.14.0
   ORCHESTRATOR_VERSION: 1.0.0
 
 jobs:
