--- a/.github/workflows/browser-tests.yml
+++ b/.github/workflows/browser-tests.yml
@@ -76,7 +76,7 @@ jobs:
           name: browser-test-results-${{ github.run_id }}
           path: |
             playwright-report/
-            test-results/
+            public/test-results/
           retention-days: 30
           if-no-files-found: warn
           compression-level: 6
@@ -139,7 +139,7 @@ jobs:
           name: visual-test-results-${{ github.run_id }}
           path: |
             playwright-report/
-            test-results/
+            public/test-results/
             browser-compatibility/
           retention-days: 30
           if-no-files-found: warn
