--- a/package.json
+++ b/package.json
@@ -27,6 +27,11 @@
     "type-check": "pnpm run typecheck",
     "check": "astro check",
     "benchmark": "node scripts/benchmark.js",
+    "optimize:images": "node scripts/optimize-images.mjs",
+    "performance:lighthouse": "lighthouse --output=html --output-path=./lighthouse-report.html --view",
+    "performance:audit": "pnpm build && lighthouse --output=json --output-path=./lighthouse-audit.json --chrome-flags='--headless'",
+    "build:analyze": "astro build && pnpm run analyze:bundle",
+    "analyze:bundle": "npx astro-bundle-analyzer dist",
     "mongodb:init": "node scripts/mongodb-init.js",
     "mongodb:seed": "node scripts/mongodb-seed.js",
     "mongodb:migrate": "node scripts/mongodb-migrate.js",
@@ -43,6 +48,8 @@
     "e2e:ui": "playwright test --ui-mode",
     "security:scan": "bash ./scripts/security-scan.sh",
     "performance:test": "node ./tests/performance/performance-test.js",
+    "performance:quick": "./scripts/test-performance.sh",
+    "performance:optimize": "./scripts/performance-quickstart.sh",
     "docker:build": "docker build -t pixelated .",
     "docker:run": "docker run -p 4321:4321 pixelated",
     "check:all": "pnpm run format:check && pnpm run lint && pnpm run typecheck",
@@ -382,6 +389,7 @@
     "satori": "^0.15.2",
     "satori-html": "^0.3.2",
     "scheduler": "^0.26.0",
+    "sharp": "^0.34.3",
     "shiki": "^3.8.1",
     "stream-browserify": "^3.0.0",
     "terser": "^5.43.1",
