feat(monitoring): Implement secure monitoring stack with Prometheus and Alertmanager
- Added Dockerfile for secure Alertmanager using scratch base.
- Created alertmanager.yml for configuring alert routes and receivers.
- Introduced alert-rules.yml for custom Prometheus alert rules.
- Updated prometheus.yml to include alerting configuration.
- Added monitoring migration documentation for cost comparison and strategy.
- Included external monitoring script for uptime checks with Slack/Discord notifications.
- Enhanced health-monitor service with detailed status reporting and Slack alerts.
- Set up setup-monitoring.sh script for easy deployment of monitoring stack.
- Updated chat demo component to improve user experience and add bias detection features.
- Refined logo wall component for better responsiveness and visual appeal.

--- a/.github/workflows/monitoring.yml
+++ b/.github/workflows/monitoring.yml
@@ -2,7 +2,9 @@ name: Monitoring
 
 on:
   schedule:
-  - cron: '*/15 * * * *'
+  # Reduced to once per day instead of every 15 minutes!
+  # This saves ~95% of GitHub Actions costs
+  - cron: '0 12 * * *'  # Noon UTC daily
   workflow_dispatch:
 
 permissions: read-all
